Add tabbed home screen with history fragment - currently displays list of games, team name/scores